--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-homepage></app-homepage> with <code><router-outlet></router-outlet>
+<app-homepage></app-homepage> 
+with 
+<code><router-outlet></router-outlet></code>
