cleanup, sticky footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<header>
+  <img src="/assets/images/logoLg.png" />
+  <h1>Dive Inn Administration</h1>
+</header>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<footer>
+
+</footer>
