--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<header>
+<header [class.logged-in]="true">
   <img src="/assets/images/logoLg.png" />
-  <h1>Dive Inn Administration</h1>
+  <h1>Dive Inn Admin</h1>
 </header>
 
 <main>
