--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,10 +3,25 @@
 :host {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100vh; // combined with html/body in styles.scss for flexbox 'sticky-footer'
   
   header {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem;
+    text-align: center;
+    img {
+      width: 100%;
+      max-width: 450px;
+      @include utility.media-breakpoint-gte(sm) {
+        width: 90%;
+      }
+    }
+    h1 {
+      font-size: 3rem;
+    }
   }
 
   main {
