--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,3 +1,3 @@
-<div class="form-container">
-  <button (click)="loginGoogle()" class="google">Login or Signup With Google</button>
-</div>
+<button (click)="loginGoogle()" class="google">
+  <img src="assets/images/Google/login/btn_google_signin_light_normal_web.png" />
+</button>
