--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
-<header [class.logged-in]="true">
-  <img src="/assets/images/logoLg.png" />
+<header 
+  [@headerTransitions]="headerAnimationState$ | async"
+  [class.logged-in]="isAllowed$ | async"
+>
+  <img [@logoTransitions]="headerAnimationState$ | async" src="/assets/images/logoLg.png" />
   <h1>Dive Inn Admin</h1>
+  <button *ngIf="isAuthenticated$ | async"
+    (click)="logout()"
+  >
+    Sign Out
+  </button>
 </header>
 
 <main>
