--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,10 @@ body {
 }
 
 button {
-  background-color: transparent;
+  padding: 0.5rem 1rem;
+  background-color: utility.$dive-red;
+  color: utility.$dive-white;
   border: none;
+  border-radius: 0.25rem;
+  font-size: 1.5rem;
 }
