--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,5 +20,6 @@ button {
   color: utility.$dive-white;
   border: none;
   border-radius: 0.25rem;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+  font-weight: bold;
 }
