--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,7 +15,7 @@
     //text-align: center;
     font-weight: normal;
     img {
-      display: block;
+      display: inline-block;
       position: relative;
       width: 100%;
       max-width: 450px;
@@ -26,10 +26,20 @@
     }
     h1 {
       display: inline-block;
-      position: relative;
+      position: absolute;
       left: 50%;
+      top: 400px;
       transform: translateX(-50%);
       font-size: 3rem;
+    }
+    .creds {
+      position: absolute;
+      right: 2rem;
+      top: 2rem;
+      button {
+        font-size: 1rem;
+        margin-left: 1rem;
+      }
     }
   }
 
