--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,13 +16,20 @@
     font-weight: normal;
     img {
       display: inline-block;
-      position: relative;
+      position: absolute;
+      top: 1rem;
+      left: 1rem;
       width: 100%;
       max-width: 450px;
       @include utility.media-breakpoint-gte(sm) {
         width: 90%;
       }
-      
+    }
+    app-main-nav {
+      position: relative;
+      display: inline-block;
+      left: 50%;
+      transform: translateX(-50%);
     }
     h1 {
       display: inline-block;
@@ -34,8 +41,8 @@
     }
     .creds {
       position: absolute;
-      right: 2rem;
-      top: 2rem;
+      right: 1rem;
+      top: 1rem;
       button {
         font-size: 1rem;
         margin-left: 1rem;
