--- a/src/app/features/flickr-albums/flickr-albums.component.html
+++ b/src/app/features/flickr-albums/flickr-albums.component.html
@@ -1,2 +1,14 @@
 <h1>Flickr Albums</h1>
-<app-photo-set-list></app-photo-set-list>
+
+<div class="albums-container">
+  <div class="albums-list-container">
+    <app-photo-set-list></app-photo-set-list>
+  </div>
+  <div class="album-info-container">
+    <h2>Album Info</h2>
+    <div>Title</div>
+    <div>Tagline</div>
+    <div>Location</div>
+  </div>
+</div>
+
