--- a/src/app/features/flickr-albums/components/photo-set-list/photo-set-list.component.scss
+++ b/src/app/features/flickr-albums/components/photo-set-list/photo-set-list.component.scss
@@ -1,21 +1,24 @@
+@use '../../../../scss/utility';
+
 div.photo-set-list-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  
-  > div {
-    display: flex;
-    flex-direction: row;
-    gap: 1.5rem;
-
-    > div {
-      flex: 3;
-
-      &:first-child {
-        flex: 0 1 auto;
+  table {
+    table-layout: auto;
+    border-collapse: collapse;
+    width: 100%;
+    border: none;
+    
+    thead {
+      th {
+        padding: 0.25rem;
+        background: utility.$dive-gray-dk;
+        text-align: left;
       }
-      &:nth-child(2) {
-        flex: 6;
+    }
+    tbody {
+      th {
+      }
+      td {
+        padding: 0 0.25rem;
       }
     }
   }
