Click album in list to load details
Co-authored-by: rick_haag@hotmail.com <rick_haag@hotmail.com>

--- a/src/app/features/flickr-albums/components/photo-set-list/photo-set-list.component.scss
+++ b/src/app/features/flickr-albums/components/photo-set-list/photo-set-list.component.scss
@@ -4,12 +4,14 @@ div.photo-set-list-container {
   table {
     table-layout: auto;
     border-collapse: collapse;
+    
     width: 100%;
     border: none;
     
     thead {
       th {
         padding: 0.25rem;
+        margin-bottom: 0.25rem;
         background: utility.$dive-gray-dk;
         text-align: left;
       }
@@ -18,7 +20,7 @@ div.photo-set-list-container {
       th {
       }
       td {
-        padding: 0 0.25rem;
+        padding: 0.25rem 0 0.25rem 0.25rem;
       }
     }
   }
