--- a/src/app/features/flickr-albums/components/photo-set-list/photo-set-list.component.html
+++ b/src/app/features/flickr-albums/components/photo-set-list/photo-set-list.component.html
@@ -1,23 +1,26 @@
 <div class="photo-set-list-container">
-  <table>
-    <thead>
-      <tr>
-        <!-- <th></th> -->
-        <th>Album</th>
-        <th>Photos</th>
-        <th>Created</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let photoSet of photoSets$ | async; index as i" (click)="albumSelect(photoSet)">
-        <!-- <th>{{ i+1 }}</th> -->
-        <td>{{ photoSet.title._content }}</td>
-        <td>{{ photoSet.count_photos }}</td>
-        <td>{{ photoSet.date_create * 1000 | date }}</td>
-      </tr>
-    </tbody>
-  </table>
-
+  <div *ngIf="(photoSets$ | async) as photoSets; else photoSetsContent">
+    <table>
+      <thead>
+        <tr>
+          <th>Album</th>
+          <th>Photos</th>
+          <th>Created</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let photoSet of photoSets; index as i" (click)="albumSelect(photoSet)">
+          <td>{{ photoSet.title._content }}</td>
+          <td>{{ photoSet.count_photos }}</td>
+          <td>{{ photoSet.date_create * 1000 | date }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <ng-template #photoSetsContent>
+    Loading...
+  </ng-template>
+  
   <!-- <div *ngFor="let photoSet of photoSets$ | async; index as i">
     <div>
       {{i + 1}}:
@@ -32,8 +35,4 @@
       {{ photoSet.date_create * 1000 | date }}
     </div>
   </div> -->
-  <div *ngIf="!(photoSets$ | async)">
-    No Albums
-  </div>
-
 </div>
