--- a/src/app/features/flickr-albums/components/photo-set-preview/photo-set-preview.component.html
+++ b/src/app/features/flickr-albums/components/photo-set-preview/photo-set-preview.component.html
@@ -1,4 +1,12 @@
+photoSetId$: {{ photoSetId$ | async }}<br>
 Photo Ids:
-<span *ngFor="let photo of photoIds$ | async">
-  {{ photo.id }}
+<span *ngFor="let photo of photoIds$ | async" style="display: block">
+  {{ photo.title }} {{ photo.id }}
+</span>
+<br><br>
+Photo Ids Static:
+<span *ngIf="photoIdsStatic$ | async as photoIds">
+  <span *ngFor="let photo of photoIds" style="display: block">
+    {{ photo.title }} {{ photo.id }}
+  </span>
 </span>
