--- a/src/app/features/flickr-albums/components/photo-set-list/photo-set-list.component.scss
+++ b/src/app/features/flickr-albums/components/photo-set-list/photo-set-list.component.scss
@@ -17,6 +17,9 @@ div.photo-set-list-container {
       }
     }
     tbody {
+      tr.selected {
+        background-color: utility.$dive-red-dk;
+      }
       th {
       }
       td {
