--- a/src/app/features/flickr-albums/components/photo-set-preview/photo-set-preview.component.html
+++ b/src/app/features/flickr-albums/components/photo-set-preview/photo-set-preview.component.html
@@ -1,12 +1,14 @@
 photoSetId$: {{ photoSetId$ | async }}<br>
-Photo Ids:
-<span *ngFor="let photo of photoIds$ | async" style="display: block">
-  {{ photo.title }} {{ photo.id }}
-</span>
-<br><br>
-Photo Ids Static:
-<span *ngIf="photoIdsStatic$ | async as photoIds">
-  <span *ngFor="let photo of photoIds" style="display: block">
+photoSetLoading$: {{ photoSetLoading$ | async }}<br>
+photoSetLoaded$: {{ photoSetLoaded$ | async }}<br>
+<!-- Photo Ids: {{ (photoIds$ | async)?.length }} -->
+<!-- <div *ngIf="photoSetLoading$ | async">
+  <span>
+    Loading...
+  </span>
+</div>-->
+<div *ngIf="photoSetLoaded$ | async">
+  <span *ngFor="let photo of photoIds$ | async" style="display: block">
     {{ photo.title }} {{ photo.id }}
   </span>
-</span>
+</div> 
