--- a/src/app/features/flickr-albums/flickr-albums.component.scss
+++ b/src/app/features/flickr-albums/flickr-albums.component.scss
@@ -11,7 +11,7 @@
     border: 1px solid red;
 
     > div {
-      border: 1px solid yellow;
+      //border: 1px solid yellow;
     }
 
     .albums-list-container {
