--- a/packages/admin-client/src/app/features/albums/components/album-assigner/album-assigner.component.html
+++ b/packages/admin-client/src/app/features/albums/components/album-assigner/album-assigner.component.html
@@ -1,1 +1,12 @@
-<p>album-assigner works!</p>
+<div *ngFor="let location of locationList$ | async">
+  {{location.id}} {{location.name}} {{location.description}}
+
+  <select [ngModel]="location.albums[0]?.flickr_photo_set_id?.toString()">
+      <option [value]="null" disabled selected hidden>Choose an album</option>
+      <!-- <option *ngIf="location.albums[0]" [value]="" disabled selected>{{ location.albums[0].title}}</option> -->
+      <!-- [selected]="location.albums[0]?.flickr_photo_set_id?.toString() === photoSet.id" -->
+      <option *ngFor="let photoSet of photoSets$ | async" [value]="photoSet.id">
+        {{photoSet.title._content}} - {{photoSet.id}}
+    </option>
+    </select>
+</div>
