--- a/packages/admin-client/src/app/pages/admin-page/admin-page.component.scss
+++ b/packages/admin-client/src/app/pages/admin-page/admin-page.component.scss
@@ -1,9 +1,8 @@
-@import '../../scss/utility';
-@import '../../scss/colors';
+@use '../../scss/utility';
 
 :host {
   display: block;
 
-  background-color: $dive-black;
-  color: $dive-white;
+  background-color: utility.$dive-black;
+  color: utility.$dive-white;
 }
