--- a/packages/admin-client/src/app/features/albums/components/album-assigner/album-assigner.component.html
+++ b/packages/admin-client/src/app/features/albums/components/album-assigner/album-assigner.component.html
@@ -28,6 +28,9 @@
             </option>
           </select>
         </td>
+        <td>
+          {{ location.modified }}
+        </td>
       </tr>
     </tbody>
   </table>
