--- a/packages/admin-client/src/app/scss/_utility.scss
+++ b/packages/admin-client/src/app/scss/_utility.scss
@@ -1,7 +1,7 @@
-@use './shared/scss/colors';
-@use './shared/scss/font-faces';
-@use './shared/scss/typography';
-@use './shared/scss/controls';
+@use './colors';
+@use './font-faces';
+@use './typography';
+@use './controls';
 // @use '../../../../shared/scss/colors';
 // @use '../../../../shared/scss/font-faces';
 // @use '../../../../shared/scss/typography';
