--- a/packages/admin-client/src/app/scss/_utility.scss
+++ b/packages/admin-client/src/app/scss/_utility.scss
@@ -1,30 +1,31 @@
-@use './colors';
-@use './font-faces';
-@use './typography';
-@use './controls';
+@forward '../../../../shared/scss/shared-imports';
+@use '../../../../shared/scss/shared-imports';
+
+
+
 // @use '../../../../shared/scss/colors';
 // @use '../../../../shared/scss/font-faces';
 // @use '../../../../shared/scss/typography';
 // @use '../../../../shared/scss/controls';
 
-@forward 'colors'; // recreate colors in this file so consumers only need to import 'utility'
-@forward 'font-faces';
-@forward 'typography';
-@forward 'controls';
+// @forward 'colors'; // recreate colors in this file so consumers only need to import 'utility'
+// @forward 'font-faces';
+// @forward 'typography';
+// @forward 'controls';
 
-$breakpoints: (
-  'min': 320,
-  'xs': 400,
-  'sm': 600,
-  'md': 840,
-  'lg': 1024,
-  'xl': 1280,
-  'ws': 1440,
-  'hd': 1920
-);
+// $breakpoints: (
+//   'min': 320,
+//   'xs': 400,
+//   'sm': 600,
+//   'md': 840,
+//   'lg': 1024,
+//   'xl': 1280,
+//   'ws': 1440,
+//   'hd': 1920
+// );
 
-@mixin media-breakpoint-gte($bp) {
-  @media (min-width: map-get($breakpoints, $bp) + 'px') {
-    @content;
-  }
-}
+// @mixin media-breakpoint-gte($bp) {
+//   @media (min-width: map-get($breakpoints, $bp) + 'px') {
+//     @content;
+//   }
+// }
