--- a/packages/shared/scss/_mixins.scss
+++ b/packages/shared/scss/_mixins.scss
@@ -1,5 +1,7 @@
+@use './breakpoints';
+
 @mixin media-breakpoint-gte($bp) {
-  @media (min-width: map-get($breakpoints, $bp) + 'px') {
+  @media (min-width: map-get(breakpoints.$breakpoints, $bp) + 'px') {
     @content;
   }
 }
