started album display design
Co-authored-by: Mike <mvondrak@gmail.com>

--- a/packages/public-client/src/app/components/shared/album-display/album-display.component.html
+++ b/packages/public-client/src/app/components/shared/album-display/album-display.component.html
@@ -1,8 +1,29 @@
 <div class="album-display-container">
-  <div>{{ albumTitle }}</div>
-  <div>{{ albumDescription }}</div>
+  <div class="album-display-container-info">
+    <div>{{ albumTitle }}</div>
+    <div>{{ albumDescription }}</div>
+  </div>
+
   <div class="album-display-container-images">
     <div *ngFor="let url of albumImageUrls">
       <img [src]="url"/>
     </div>
+  </div>
+
+</div>
+
+
+<div class="test-divs">
+  <div class="info">
+    <div>Title</div>
+    <div>Description</div>
+  </div>
+  <div class="images">
+    <img src="/assets/images/logoLg.png">
+    <img src="/assets/images/logoLg.png">
+    <img src="/assets/images/logoLg.png">
+    <img src="/assets/images/logoLg.png">
+    <img src="/assets/images/logoLg.png">
+    <img src="/assets/images/logoLg.png">
+  </div>
 </div>
