--- a/packages/public-client/src/app/components/shared/album-display/album-display.component.scss
+++ b/packages/public-client/src/app/components/shared/album-display/album-display.component.scss
@@ -1,51 +1,87 @@
+@use '../../scss/utility';
+
 :host {
-  .album-display-container {
-    display: flex;
-    flex-direction: row;
+  display: block;  
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 0, 0, 0.2);
+  .album-display {
+    position: relative;
+    overflow: hidden;
+    background: rgba(0, 0, 255, 0.2);
+    height: 100%;
 
-    &-info {
-      flex: 0 0 30%;
-    }
     &-images {
-      flex: 0 1 auto;
+      position: absolute;
+      top: 0; bottom: 0; left: 0; right: 0;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: row;
+      flex-wrap: nowrap;      
+      background: #000;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
-  }
+    &-nav {      
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 2rem;
+      height: 2rem;
+      margin: 0;
+      padding: 0;
+      border: 2px solid utility.$dive-red;
+      border-radius: 50%;
+      font-size: 2rem;
+      font-weight: bold;
+      line-height: 0;
+      color: utility.$dive-red;
+      background-color: transparent;
+      box-shadow: 0px 0px 6px 0px #fff;
+      text-shadow: 0px 0px 4px #000;
+      &:hover {
+        background-color: rgba(255,255,255,0.5);
+      }
 
-
-
-
-
-
-  img {
-    max-width: 100px;
-  }
-
-  > div {
-    margin: 1rem;
-    padding: 1rem;
-    border: 1px solid red;
-
-    > div {
-      border: 1px solid blue;
+      &.prev {
+        left: 1rem;
+        padding-right: 0.2rem;
+      }
+      &.next {
+        right: 1rem;
+        padding-left: 0.2rem;
+      }
     }
-    > span {
-      border: 1px solid green;
-    }
-  }
-
-
-  .test-divs {
-    display: flex;
-    flex-direction: row;
-    > div {    
-      width: 50%;
-    }
-
-    .images {
+    &-pill-box {
+      position: absolute;
+      bottom: 0.75rem;
+      right: 50%;
+      transform: translateX(50%);
       display: flex;
-      flex-wrap: wrap;
+      gap: 0.15rem;
+      
+      button {
+        width: 1.25rem;
+        height: 0.75rem;
+        border: 2px solid utility.$dive-gray-dk;
+        border-radius: 8px;
+        background-color: utility.$dive-red;
+        box-shadow: 0px 0px 6px 0px #fff;
+        &:disabled {
+          background-color: utility.$dive-white;
+        }
+      }
     }
+    &-info {
+      position: absolute;
+      top: 0rem; left: 0rem;
+      padding: 1rem;
+      border-radius: 0 0 1rem 0;
+      background-color: rgba(255,255,255,0.45);
+      text-shadow: 1px 1px 2px #000;
+      text-align: center;
+    }
+
   }
 }
