--- a/packages/public-client/src/app/components/shared/album-display/album-display.component.scss
+++ b/packages/public-client/src/app/components/shared/album-display/album-display.component.scss
@@ -11,6 +11,8 @@
     background: rgba(0, 0, 255, 0.2);
     height: 100%;
 
+    border: 2px solid #0f0;
+
     &-images {
       position: absolute;
       top: 0; bottom: 0; left: 0; right: 0;
@@ -18,10 +20,19 @@
       flex-direction: row;
       flex-wrap: nowrap;      
       background: #000;
-      img {
-        width: 100%;
-        height: 100%;
-      }
+
+      &-frame {
+        display: inline-block;
+        white-space: nowrap;
+        img {
+          //width: 100%;
+          //height: auto;
+          // height: 100%;
+          //min-width: 100%;
+          max-width: 800px;
+          //max-height: 600px;
+        }
+      }      
     }
     &-nav {      
       position: absolute;
