--- a/packages/public-client/src/app/components/shared/album-display/album-display.component.html
+++ b/packages/public-client/src/app/components/shared/album-display/album-display.component.html
@@ -1,16 +1,22 @@
 <div class="album-display">
 
   <div class="album-display-images">
-    <app-image-display *ngFor="let url of imageUrls"
+    <app-image-display *ngFor="let url of imageUrls; index as idx"
+      [class.top]="idx % 4 === 0 && idx % 5 !== activeImage"
+      [class.right]="idx % 4 === 1 && idx % 5 !== activeImage"
+      [class.bottom]="idx % 4 === 2 && idx % 5 !== activeImage"
+      [class.left]="idx % 4 === 3 && idx % 5 !== activeImage"
       [imageUrl]="url"
     ></app-image-display>
   </div>
 
-  <button class="album-display-nav prev">&lt;</button>
-  <button class="album-display-nav next">&gt;</button>
+  <button (click)="prevClicked()" class="album-display-nav prev">&lt;</button>
+  <button (click)="nextClicked()" class="album-display-nav next">&gt;</button>
 
   <div class="album-display-pill-box">
-    <button *ngFor="let url of imageUrls"
+    <button *ngFor="let url of imageUrls; index as idx"
+      [class.activePill]="idx === activeImage"
+      (click)="pillClicked(idx)"
     ></button>
   </div>
   
