--- a/packages/public-client/src/app/components/shared/album-display/album-display.component.scss
+++ b/packages/public-client/src/app/components/shared/album-display/album-display.component.scss
@@ -4,35 +4,54 @@
   display: block;  
   width: 100%;
   height: 100%;
-  background: rgba(255, 0, 0, 0.2);
+  
+  background: blue;
+  
   .album-display {
     position: relative;
     overflow: hidden;
-    background: rgba(0, 0, 255, 0.2);
     height: 100%;
 
-    border: 2px solid #0f0;
+    background: utility.$dive-gray-dk;
 
     &-images {
-      position: absolute;
-      top: 0; bottom: 0; left: 0; right: 0;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;      
-      background: #000;
+      position: relative;      
+      //display: flex;
+      //flex-direction: row;
+      //flex-wrap: nowrap;
+      background: magenta;
 
-      &-frame {
-        display: inline-block;
-        white-space: nowrap;
-        img {
-          //width: 100%;
-          //height: auto;
-          // height: 100%;
-          //min-width: 100%;
-          max-width: 800px;
-          //max-height: 600px;
+      app-image-display {
+        position: absolute;
+        top: 0; bottom: 0; left: 0; right: 0;        
+        transform: translate(0, 0);
+        transition: transform 0.75s ease;
+        &.top {
+          transform: translate(0, -600px);
         }
-      }      
+        &.bottom {
+          transform: translate(0, 600px);
+        }
+        &.left {
+          transform: translate(-800px, 0);
+        }
+        &.right {
+          transform: translate(800px, 0);
+        }
+      }
+
+      // &-frame {
+      //   display: inline-block;
+      //   white-space: nowrap;
+      //   img {
+      //     //width: 100%;
+      //     //height: auto;
+      //     // height: 100%;
+      //     //min-width: 100%;
+      //     max-width: 800px;
+      //     //max-height: 600px;
+      //   }
+      // }      
     }
     &-nav {      
       position: absolute;
@@ -79,8 +98,11 @@
         border-radius: 8px;
         background-color: utility.$dive-red;
         box-shadow: 0px 0px 6px 0px #fff;
-        &:disabled {
+        &.activePill {
           background-color: utility.$dive-white;
+        }
+        &:disabled {
+          background-color: utility.$dive-gray-dk;
         }
       }
     }
