--- a/packages/public-client/src/app/components/shared/image-display/image-display.component.scss
+++ b/packages/public-client/src/app/components/shared/image-display/image-display.component.scss
@@ -1,17 +1,21 @@
-.frame {
-    width: 800px;
-    height: 600px;
-    overflow: hidden;
+:host {
+  display: block;
 
-  img {
-    width: 100%;  
-    height: 100%; 
-    object-fit: cover;
-    object-position: 0% 0%;
-    transition: object-position 1s ease-in-out;
+  .frame {
+      width: 800px;
+      height: 600px;
+      overflow: hidden;
 
-    &.pan-bottom {
-      object-position: 100% 100%;
+    img {
+      width: 100%;  
+      height: 100%; 
+      object-fit: cover;
+      object-position: 0% 0%;
+      transition: object-position 1s ease-in-out;
+
+      &.pan-bottom {
+        object-position: 100% 100%;
+      }
     }
   }
 }
