--- a/packages/public-client/src/app/components/pages/inside/inside.component.html
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.html
@@ -2,7 +2,7 @@
 <a routerLink="/home">Home Page</a>
 
 <app-album-display
-  albumTitle="Test Title"
-  albumDescription="Test Description"
-  [albumImageUrls]="albumImageUrls"
+  title="Test Title"
+  description="Test Description"
+  [imageUrls]="albumImageUrls"
 ></app-album-display>
