WIP - graphql-code-generator

--- a/packages/admin-client/src/app/features/albums/components/album-assigner/album-assigner.component.html
+++ b/packages/admin-client/src/app/features/albums/components/album-assigner/album-assigner.component.html
@@ -8,7 +8,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let location of albumByLocation; index as i">
+      <tr *ngFor="let location of albumByLocation.album_location; index as i">
         <td>{{ location.description }}</td>
         <td>
           <select [ngModel]="location.albums[0]?.flickr_photo_set_id?.toString()" (ngModelChange)="photoSetChanged($event, location)">
