--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -1,2 +1,38 @@
-<p>home works!</p>
-<a routerLink="/inside">Inside Page</a>
+<div class="header">
+    <img src="../../../../assets/images/logoLg.png">
+    <div class="nav"></div>
+    <div class="boat-cam">boat cam</div>
+</div>
+<div class="intro">
+    <p>Cleanest bar in Denver</p>
+    <img src="../../../../assets/images/street-night.jpg">
+</div>
+<div class="contact">
+    <div class="address">
+        <p>ADDRESS</p>
+        <p>{{ footerAddress }}</p>
+    </div>
+    <div class="hours">
+        <p>HOURS</p>
+        <div *ngFor="let days of contactHours">{{ days }}</div>
+    </div>
+    <div class="phone">
+        <p>PHONE</p>
+        <p>{{ footerPhone }}</p>
+    </div>
+</div>
+<app-topic-section
+></app-topic-section>
+<app-topic-section
+></app-topic-section>
+<div class="footer">
+  <p>{{footerAddress}} | {{footerPhone}}</p>
+  <div class="social-links-container">
+    <img src="/assets/images/social/facebook.png" />
+    <img src="/assets/images/social/instagram.png" />
+    <img src="/assets/images/social/yelp.png" />
+    <img src="/assets/images/social/trip-advisor.png" />
+    <img src="/assets/images/social/twitter.png" />
+  </div>
+  <div class="navigation"></div>
+</div>
