--- a/packages/public-client/src/app/app.component.html
+++ b/packages/public-client/src/app/app.component.html
@@ -1,6 +1,6 @@
 
-<header>header</header>
-<main>
+<!-- <header>header</header> -->
+<!-- <main> -->
   <router-outlet></router-outlet>
-</main>
-<footer>footer</footer>
+<!-- </main> -->
+<!-- <footer>footer</footer> -->
