example images, mouse-facer

--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -5,6 +5,11 @@
 </header>
 
 <main>
+  
+  <app-mouse-facer
+    imgSrc="../../../../assets/images/home/dive-inn-exterior.jpg"
+  ></app-mouse-facer>
+
   <div class="intro">
       <p>Cleanest bar in Denver</p>
       <img src="../../../../assets/images/street-night.jpg">
