WIP - fancy mouse tracking

--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -12,7 +12,7 @@
   
     <div class="intro">
         <p>Cleanest bar in Denver</p>
-        <img src="../../../../assets/images/street-night.jpg">
+        <!-- <img src="../../../../assets/images/street-night.jpg"> -->
     </div>
     <div class="contact">
         <div class="address">
@@ -39,12 +39,12 @@
 
 <footer>
   <p>{{footerAddress}} | {{footerPhone}}</p>
-  <div class="social-links-container">
+  <!-- <div class="social-links-container">
     <img src="/assets/images/social/facebook.png" />
     <img src="/assets/images/social/instagram.png" />
     <img src="/assets/images/social/yelp.png" />
     <img src="/assets/images/social/trip-advisor.png" />
     <img src="/assets/images/social/twitter.png" />
-  </div>
+  </div> -->
   <div class="navigation"></div>
 </footer>
