--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.html
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.html
@@ -1,10 +1,12 @@
 <!-- <img [src]="imgSrc" /> -->
 
 <div #MouseFacer
-  class="mouse-facer-container"  
+  class="mouse-facer-container"
+
 >
   <div
     class="mouse-facer-content"
+    appMouseTracker
   >
     <ng-content></ng-content>
   </div>
