--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
@@ -5,7 +5,8 @@
     background: magenta;
     width: 100%;
     height: 50vw;
-    //overflow: hidden;
+    overflow: hidden;
+    perspective: 2000px;
 
     .mouse-facer-content {
       background-image: url("/assets/images/home/dive-inn-exterior.jpg");
