--- a/packages/public-client/src/styles.scss
+++ b/packages/public-client/src/styles.scss
@@ -1,11 +1,16 @@
 @use '../../shared/scss/shared-imports';
 
+* {
+  box-sizing: border-box;
+}
+
 html {
 
 }
 
 html, body {
-    margin: 0;
+  margin: 0;
+  padding: 0;
 }
 
 button {
