--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
@@ -2,6 +2,7 @@
   display: block;
 
   .mouse-facer-container {
+    position: relative;
     background: magenta;
     width: 100%;
     height: 50vw;
@@ -9,9 +10,14 @@
     perspective: 2000px;
 
     .mouse-facer-content {
+      position: absolute;
       background-image: url("/assets/images/home/dive-inn-exterior.jpg");
       background-size: cover;
       background-position: 0% 40%;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
   }
 }
