home page formatting
Co-authored-by: Mike <mvondrak@gmail.com>

--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -1,6 +1,14 @@
 <header>
   <img src="../../../../assets/images/logoLg.png">
-  <nav></nav>
+  <nav>
+    <ul>Home</ul>
+    <ul>Menu</ul>
+    <ul>Events</ul>
+    <ul>Bookings</ul>
+    <ul>ABOUT US</ul>
+    <ul>WORK WITH US</ul>
+    <ul>DIVE SHOP</ul>
+  </nav>
   <div class="boat-cam"><span>boat cam</span></div>
 </header>
 
@@ -46,5 +54,10 @@
     <img src="/assets/images/social/trip-advisor.png" />
     <img src="/assets/images/social/twitter.png" />
   </div> -->
-  <div class="navigation"></div>
+  <div class="navigation">
+    <ul>Contact Us</ul>
+    <ul>News</ul>
+    <ul>PADI Club</ul>
+    <ul>Sightings</ul>
+  </div>
 </footer>
